compiler/tests/valid/definite/Subtype_Valid_3.whiley
define sr3nat as int where $ > 0

void System::main([string] args):
    x = [1]
    x[0] = 1
    out->println(str(x))
    
